# MPI-parallelism

./: README.md
01/sequential/: CMakeLists.txt
01/sequential/src/: Graph.cpp  Graph.h  Instance_handler.cpp  main.cpp
01/sequential2/: CMakeLists.txt  main.cpp
01/sequential2/src/: Graph.cpp  Graph.h  Instance_handler.cpp  Instance_handler.h  main.cpp
02/task_parallelism/: CMakeLists.txt
02/task_parallelism/src/: Graph.cpp  Graph.h  Instance_handler.cpp  Instance_handler.h  main.cpp
03/data_parallelism/: CMakeLists.txt  Makefile  kalabto2
03/data_parallelism/src/: Graph.cpp  Graph.h  Instance_handler.cpp  main.cpp
04/: parallel_job.txt  run_parallel.py  run_parallel.py.save
04/process_paralellism_new/: CMakeLists.txt  a.out  kalabto2@star.fit.cvut.cz  main.cpp
04/process_parallelism/: CMakeLists.txt
04/process_parallelism/src/: Graph.cpp  Instance_handler.h  main.cpp
05/: analysis.ipynb
05/data/: data.csv  data1.csv  data2.csv  process.csv  process1.csv  process2.csv  serial.csv  task.csv  task1.csv  task2.csv
05/report/: main.tex
05/report/pages/: assignment.tex  body.tex  conclusion.tex  data_parallelism.tex  frontPage.tex  mpi.tex  task_parallelism.tex
